--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@astrojs/react": "^4.4.2",
     "@astrojs/vercel": "^9.0.4",
+    "@portabletext/react": "^6.0.2",
     "@sanity/astro": "^3.2.11",
     "@sanity/client": "^7.15.0",
     "@sanity/image-url": "^2.0.3",
@@ -18,6 +19,7 @@
     "@types/react": "^19.2.14",
     "@types/react-dom": "^19.2.3",
     "astro": "^5.17.1",
+    "astro-portabletext": "^0.13.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
@@ -30,6 +32,7 @@
     "tailwindcss": "^4.2.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.19",
     "shadcn": "^3.8.5",
     "tw-animate-css": "^1.4.0"
   }
